--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,5 +57,13 @@
     box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   }
 
+.bg_img {
+    background-image: url(../../public/2.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+
+}
+
 
   
