header problem solved

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,7 @@
   }
 
 .bg_img {
-    background-image: url(../../public/2.png);
+    background-image: url(../../public/s2.png);
     background-repeat: no-repeat;
     background-position: center;
     width: 100%;
