--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,6 +71,28 @@
     background-position: center;
     width: 100%;
 }
+.about_img {
+    background-image: url(../../public/images/startup.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 585px;
+    transition:  0.3s;
+    margin-bottom: 0px;
+    position: relative;
+    object-fit: cover;
+    
+}
+.overlay {
+    background-color: #000B41;
+    opacity: 0.5;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    position: absolute;
+}
+
 
 
 
